change js if else if conditions to show the different track options

--- a/tracks.html
+++ b/tracks.html
@@ -11,7 +11,7 @@
   <body>
     <h1 class="Jumbotron center">Epicodus Program Suggestions</h1>
     <div class="container">
-      <p>To help you decide which programming language tracks to pursue at Epicodus, please fill out the form below.  We'll make a suggestion.</p>
+      <p>Here at Epicodus, we have 3 programming language tracks for you to choose from.  To help you decide which programming language tracks to pursue at Epicodus, please answer the followng 5 questions in the form below.  We'll make a suggestion.</p>
 
       <form id="tracks">
         <div class="form-group">
@@ -76,24 +76,24 @@
       </form>
 
       <div class="panel panel-danger" id="Java">
-        <p>Based on your <em>answers</em>, <span id="name"></span>, here's our suggestion:</p>
+        <p>Based on your <em>answers</em>, <span id="thisName"></span>, here's our suggestion:</p>
         <p>You should consider learning Java.  Java is a pretty complex language to learn.  Java is a widely used programming language expressly designed for use in the distributed environment of the internet.  It is the most popular programming language for Android smartphone applications and is among the most favored for edge device and internet of things development.</p>
         <p>Android is a mobile operating system developed by the folks at Google. Android programs are written in Java and run through a Java Virtual Machine (JVM) that is optimized for mobile devices."</p>
       </div>
-      <p>Based on your <em>answers</em>, <span id="name"></span>, here's our suggestion:</p>
-      <div id="Ruby">
 
+      <div class="panel panel-success" id="Ruby">
+        <p>Based on your <em>answers</em>, <span id="thisName"></span>, here's our suggestion:</p>
         <p>You should consider learning Ruby. Ruby is a dynamic, reflective, object-oriented, general-purpose programming language. It was designed and developed in the mid-1990s by Yukihiro "Matz" Matsumoto in Japan. According to its creator, Ruby was influenced by Perl, Smalltalk, Eiffel, Ada, and Lisp.</p>
         <p>Ruby on Rails, or simply Rails, is a server-side web application framework written in Ruby under the MIT License. Rails is a model–view–controller (MVC) framework, providing default structures for a database, a web service, and web pages.</p>
       </div>
 
-      <div id="CSS">
+      <div class="panel panel-warning" id="CSS">
         <p>Based on your <em>answers</em>, <span id="thisName"></span>, here's our suggestion:</p>
         <p>You should consider learning CSS. Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language. ... CSS is designed primarily to enable the separation of presentation and content, including aspects such as the layout, colors, and fonts.</p>
       </div>
 
-      <div id="default">
-        <p>Based on your <em>answers</em>, <span id="name"></span>, here's our suggestion:
+      <div class="well" id="default">
+        <p>Based on your <em>answers</em>, <span id="thisName"></span>, here's our suggestion:
         </p>
         <p>
         It is not important which programming language you choose to purse at Epicodus (or any other coding bootcamp). What is important is your desire to learn and motivation to succeed.  Once you learn one language, you can readily learn another language.  In the real world, you may have other past  experiences that fit your employer's need, but the employer uses a different programming language than the ones you're familiar with.  No worries!  At Epicodus, you also learn how to learn, making knowledge acquisition of another languange relatively easy.  Good luck!
