add more text to html file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div class="container">
 
-      <p>Here at Epicodus, we have 3 programming language tracks for you to choose from.  To help you decide which programming language tracks to pursue at Epicodus, please answer the followng 5 questions in the form below.  We'll make a suggestion.  If you want to learn more about our program, please <a href="https://epicodus.com">Click Here.</a></p>
+      <p>Here at Epicodus, we have 3 programming language tracks for you to choose from.  The tracks are Java/Android, Ruby/Rails, and CSS/Design.  To help you decide which programming language track to pursue at Epicodus, please answer the followng 5 questions in the form below.  We'll make a suggestion.  If you want to learn more about our program, please <a href="https://epicodus.com">Click Here.</a></p>
 
       <form id="tracks">
         <div class="form-group">
